WIP generate_output_signed_urls dataset
